# centauro

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
data/: .gitignore
jet_tools/: README.md
jet_tools/include/: beam_helpers.h  calibration.h  config.h  electron_veto.h  event_progress.h  jet_builders.h  math_helpers.h  plot_helpers.h  root_io.h  transform_breit.h  types.h  z_jet.h
jet_tools/src/: beam_helpers.cc  calibration.cc  config.cc  electron_veto.cc  jet_builders.cc  math_helpers.cc  plot_helpers.cc  root_io.cc  transform_breit.cc  z_jet.cc
programs/: CMakeLists.txt  cluster_jets.cc  eta_vs_z.cc  overlay.cc
programs/data_prep/: CMakeLists.txt  README.md  cut_batch.py  cut_events.cc  get_batch_reco.py  merge_data.cc  reducer.cc
programs/diff_frame/: CMakeLists.txt  eta_phi.cc  match_jets.cc  splitting.cc
programs/same_frame/: CMakeLists.txt  controls.cc  match_jets.cc  performance.cc
tools/: read_outputs.py
